--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "docker-compose up --build"
+    "test": "node --experimental-loader=./util/loader.js ."
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,10 @@
   "homepage": "https://github.com/Yimura/Node-Backend#readme",
   "dependencies": {
     "@yimura/import-dir": "^0.1.12",
-    "mongoose": "^5.13.7"
+    "@yimura/node-rockstar-api": "file:../opt/node-rockstar-api",
+    "mime": "^3.0.0",
+    "mongoose": "^5.13.14",
+    "node-fetch": "^3.2.3",
+    "waffle-manager": "^0.1.4"
   }
 }
